# LifeOS

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  mcp_server.py  pyproject.toml  requirements.txt
api/: __init__.py  main.py
config/: crm_config.py  crm_mappings.example.yaml  crm_mappings.yaml.example  crm_settings.yaml  family_members.example.json  gdoc_sync.example.yaml  gsheet_sync.example.yaml  linkedin_industry_mappings.json.example  linkedin_tags.example.json  marketing_patterns.py  newsyslog-lifeos.conf  nickname_lookup.py  people_config.py  people_dictionary.example.json  relationship_overrides.example.json  relationship_weights.py  settings.py
docs/: daily-sync-check.md
scripts/: authenticate_google.py  backfill_interaction_metadata.py  backup.sh  chromadb-watchdog.sh  chromadb.sh  cleanup_marketing_emails.py  cleanup_orphaned_records.py  deploy.sh  enrich_linkedin_jobs.py  fix_linkedin_from_csv.py  fix_linkedin_mismatches.py  fix_orphaned_gmail_interactions.py  fix_vault_matches.py  hidden_entities.py  link_imessage_entities.py  link_slack_entities.py  link_source_entities.py  merge_people.py  monitor_slack_sync.sh  post-commit  pre-commit  push_birthdays_to_contacts.py  relink_source_entities.py  run_all_syncs.py  run_fda_syncs.py  run_sync_with_fda.sh  run_sync_wrapper.sh  scrape_linkedin_profiles.py  server.sh  service.sh  setup-launchd.sh  split_person.py  sync_apple_contacts.py  sync_contacts_csv.py  sync_crm_to_vectorstore.py  sync_entity_cleanup.py  sync_gmail_calendar_interactions.py  sync_google_docs.py  sync_google_sheets.py  (+12 more)
(+238 files in other folders)
